# JustImageViewer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  Packager.toml  README.md  README_KR.md  build.rs
assets/: icon.icns
config/: default_settings.toml
src/: constants.rs  main.rs  ui.rs
src/app/: mod.rs
src/core/: helper.rs  image_loader.rs  image_manager.rs  media.rs  mod.rs
src/infra/: config.rs  logging.rs  mod.rs  web_server.rs
src/math/: mod.rs
src/render/: app_resources.rs  image_manager.rs  image_uploader.rs  imgui_textures.rs  mod.rs  texture_atlas_manager.rs  texture_manager.rs
src/ui/: helper.rs  keyboard_shortcuts_window.rs  layout_constants.rs  mod.rs  ui.rs
