[package]
name = "image-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "5"
env_logger = "0.11"
eframe = { version = "0.28", default-features = false, features = ["wgpu", "default_fonts"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
rfd = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
