[package]
name = "image-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "5"
env_logger = "0.11"
gl = "0.14"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp", "tiff", "tga", "ico", "pnm", "hdr", "dds", "farbfeld"] }
imgui = "0.11"
imgui-opengl-renderer = "0.12.1"
imgui-sdl2 = "0.15"
log = "0.4"
rfd = "0.13"
sdl2 = { version = "0.36", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
