[package]
name = "image-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "5"
env_logger = "0.11"
winit = "0.29"
imgui = { version = "0.12", features = ["tables-api"] }
imgui-winit-support = "0.12"
wgpu = "25.0.2"
imgui-wgpu = "0.25"
pollster = "0.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp", "tiff", "tga", "ico", "pnm", "hdr", "dds", "farbfeld"] }
log = "0.4"
rfd = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
